# akai-lpk25-mk1

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
.claude/: README.md
.github/workflows/: ci.yml
docs/: discovery-checklist.md  feature-list.md  protocol.md
docs/images/: README.md
docs/manuals/: README.md
docs/superpowers/plans/: 2026-06-23-cli-daily-driver.md  2026-06-23-copy-command.md  2026-06-23-syx-format.md  2026-06-23-tui-editor.md  2026-06-24-doctor-command.md
docs/superpowers/specs/: 2026-06-22-lpk25-mk1-editor-design.md  2026-06-23-backup-management-design.md  2026-06-23-cli-daily-driver-design.md  2026-06-23-config-file-design.md  2026-06-23-copy-command-design.md  2026-06-23-decoded-monitor-design.md  2026-06-23-dry-run-design.md  2026-06-23-named-banks-design.md  2026-06-23-syx-format-design.md  2026-06-23-tui-editor-design.md  2026-06-24-doctor-command-design.md
src/lpk25/: __init__.py  cli.py  codec.py  config.py  device.py  diagnostics.py  discovery.py  library.py  mididecode.py  model.py  protocol.py  render.py  transport.py
src/lpk25/tui/: __init__.py  app.py  controller.py  monitor.py  view.py
tests/: test_backup_mgmt.py  test_bank.py  test_cli_completion.py  test_cli_daily_driver.py  test_cli_doctor.py  test_cli_dry_run.py  test_codec.py  test_config.py  test_device.py  test_diagnostics.py  test_library.py  test_mididecode.py  test_model.py  test_protocol.py  test_render.py  test_tui_cli.py  test_tui_controller.py  test_tui_dispatch.py  test_tui_monitor.py  test_tui_smoke.py  test_tui_view.py
