[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lpk25"
version = "0.1.0"
description = "Cross-platform program editor and SysEx library for the Akai LPK25 mk1"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "akai-lpk25-mk1 contributors" }]
keywords = ["akai", "lpk25", "midi", "sysex", "editor", "controller"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

# The MIDI backend is an optional extra so the pure-Python core (protocol,
# codec, model) can be imported and unit-tested without building python-rtmidi.
# tomli backports the stdlib tomllib (3.11+) for the optional config file; it is
# only installed on Python < 3.11.
dependencies = [
    "tomli>=1.1.0 ; python_version < '3.11'",
]

[project.optional-dependencies]
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
# Tab-completion for bash/zsh/fish via `lpk25 completion <shell>`. Optional so
# the core CLI stays dependency-light; completion just no-ops without it.
completion = ["argcomplete>=3"]
dev = ["pytest>=7", "ruff>=0.4", "argcomplete>=3"]

[project.scripts]
lpk25 = "lpk25.cli:main"

[project.urls]
Repository = "https://github.com/minigraphx/akai-lpk25-mk1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
